# hkl

./: .gitignore  .gitmodules  .rcomp  .travis.yml  Gemfile  LICENSE  Makefile.in  README.md  Rakefile  aclocal.m4  build-env  build-env.rb  configure  configure.ac  contributing.md  index.html  libtool  owl.py  params.json  screech.py  unclude.py  valgrind-suppression.supp
examples/: 99bottles.hkl  add.hkl  assign.hkl  echo.hkl  hello.hkl  io.hkl  joust.hkl  math.hkl  nprime.hkl  repeat.hkl  shape.hkl  size.hkl  tomato.hkl
owl/expected/: gc_test_2_free.result
owl/tests/: gc_test_2_free.test
src/: Makefile.am  Makefile.in  hkl.c  hkl.h  hkl_alloc.h  hkl_assert_stmt.c  hkl_assert_stmt.h  hkl_assign_stmt.c  hkl_assign_stmt.h  hkl_deque.c  hkl_deque.h  hkl_expression.c  hkl_expression.h  hkl_hash.c  hkl_hash.h  hkl_include_stmt.c  hkl_include_stmt.h  hkl_list.c  hkl_list.h  hkl_object.c  hkl_object.h  hkl_puts_stmt.c  hkl_puts_stmt.h  hkl_return_stmt.c  hkl_return_stmt.h  hkl_statement.c  hkl_statement.h  hkl_stmt.h  hkl_string.c  hkl_string.h  hkl_test.c  hkl_tree.c  hkl_tree.h  hkl_type.h  hkl_value.c  hkl_value.h  hkl_variable.c  hkl_variable.h  hklc.c  hklc.h  (+20 more)
src/expression/: hklr_as_integer.c  hklr_as_real.c  hklr_as_string.c  hklr_op_bitwise_and.c  hklr_op_bitwise_or.c  hklr_op_bitwise_xor.c  hklr_op_coalesce.c  hklr_op_divide.c  hklr_op_equal.c  hklr_op_greater.c  hklr_op_greater_equal.c  hklr_op_less.c  hklr_op_less_equal.c  hklr_op_minus.c  hklr_op_mod.c  hklr_op_multiply.c  hklr_op_not_equal.c  hklr_op_plus.c  hklr_op_size.c  hklr_op_typeof.c
src/linenoise/: linenoise.c
src/module/: io.c  io.hkl  math.c  math.hkl
src/statement/: hklr_statement_assign.c  hklr_statement_call.c  hklr_statement_for.c  hklr_statement_if.c  hklr_statement_puts.c  hklr_statement_while.c
src/test/: gc.c  hash.c  traversal.c
test/tests/literals/: literals1.test  literals2.test  literals3.test
